<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TestForFactory!</string>
    <string name="app_name">TestForFactory</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="finish">Finish test</string>
    <string name="test_all_exstorage">Test all storage / Net</string>
    <string name="test_sd_usb">Test SD / USB</string>
    <string name="test_keypad">Test keypad</string>
    <string name="test_color">Test color</string>
    
    <string name="create_client">Create_Setting_Client</string>
    <string name="send_msg">Send_Message</string>
    <string name="close_client">Close_Setting_Client</string>
    
    <string name="test_clock">System Clock :</string>
    <string name="test_id">Product ID :</string>
    <string name="test_mac">Ethernet MAC :</string>
    <string name="test_finish">Test Finish</string>
    
    <string name="null_msg">NULL</string>
    <string name="pass_msg">PASS</string>
    <string name="ng_msg">NG</string>
    <string name="dialog_sure">Sure</string>
    <string name="dialog_cancel">Cacel</string>
  
    <string name="test_result">Check Test Result</string>
    
</resources>
