<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dip"
    android:paddingTop="5dip"
    android:layout_margin="0dip"
    >
    
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/black"
	android:text="@string/black"
	android:textStyle="bold"
	android:textSize="18dip"
	android:textColor="#000000"
	android:background="@drawable/menuback"
	/>
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/white"
	android:text="@string/white"
	android:textStyle="bold"
	android:textSize="18dip"
	android:textColor="#FFFFFF"
	android:layout_marginTop="2dip"
	android:background="@drawable/menuback"
	/>
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/red"
	android:text="@string/red"
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:textSize="18dip"
	android:layout_marginTop="2dip"
	android:background="@drawable/menuback"
	/>
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/green"
	android:text="@string/green"
	android:textStyle="bold"
	android:textColor="#00FF00"
	android:textSize="18dip"
	android:layout_marginTop="2dip"
	android:background="@drawable/menuback"
	/>
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/blue"
	android:text="@string/blue"
	android:textStyle="bold"
	android:textColor="#0000FF"
	android:textSize="18dip"
	android:layout_marginTop="2dip"
	android:background="@drawable/menuback"
	/>
<Button
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/finish"
	android:text="@string/finish"
	android:textStyle="bold"
	android:textSize="18dip"
	android:layout_marginTop="2dip"
	android:background="@drawable/menuback"
	/>
</LinearLayout>
