<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layoutback"
    >	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/allstorage"
		android:text="@string/test_all_exstorage"
		android:textStyle="bold"
		android:textSize="18dip"
        android:textColor="#000000"
		android:layout_marginTop="130dip"
		android:layout_marginLeft="80dip"
		android:background="@drawable/mainbtnback2"
		/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/keypad"
		android:text="@string/test_keypad"
		android:textStyle="bold"
		android:textSize="18dip"
        android:textColor="#000000"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="80dip"
		android:background="@drawable/mainbtnback2"
		/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/color"
		android:text="@string/test_color"
		android:textStyle="bold"
		android:textSize="18dip"
        android:textColor="#000000"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="80dip"
		android:background="@drawable/mainbtnback2"
		/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/close"
		android:text="@string/finish"
		android:textStyle="bold"
		android:textSize="18dip"
        android:textColor="#000000"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="80dip"
		android:background="@drawable/mainbtnback2"
		/>
</LinearLayout>
